src/snapshots/tuipe__ui__tests__test_personal_best_100x28.snap
---
source: src/ui.rs
expression: rendered
---

             ·         ✦     ·                   ✦                     ·                   ·
                     ╭────────────────────────────────────────────────────────╮
                     │            ★  NOVO RECORDE  ·  12 wpm  ·  +4           │
                     ╰────────────────────────────────────────────────────────╯

     wpm ao longo do tempo
       20│
         │
         │
         │⢄                                                                                   ⢠
       10│ ⠉⠒⢄                                                                              ⢀⠔⠁
         │    ⠉⠑⠤⣀                                                                         ⢠⠊
         │        ⠉⠑⠒⠢⠤⠤⣀⣀⣀                                                               ⡰⠁
         │                 ⠉⠉⠉⠉⠒⠒⠒⠒⠒⠒⠤⠤⠤⠤⠤⠤⠤⢄⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀                              ⢀⠔⠉
         │                                               ⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠒⠒⠒⠒⠒⠒⠒⠊⠁
        0└─────────────────────────────────────────────────────────────────────────────────────
         1               2.8              4.6              6.3              8.1             9.9

     tipo de teste     wpm       precisão     bruto     caracteres     consistência    tempo
     Aa 1 palavras     12        100%         12        10/0/0/0       0%              9.9s
     🌐  português
     ★ especialista




                   › enter próximo    ↻ r repetir    ⌁ s estatísticas    × q sair
