src/snapshots/tuipe__ui__tests__test_result_100x28.snap
---
source: src/ui.rs
expression: "render_engine_at(100, 28, &engine)"
---




     wpm       wpm over time   × errors
     7           40│
                   │
     acc           │
     100%          │⡄
                 20│⠘⡄                    ⢠⠋⠓⠢⠤⣄⣀
                   │ ⠹⡄                   ⡎      ⠉⠉⠓⠒⠲⠤⠤⢄⣀⣀⣀
                   │  ⠙⠦⣀                ⢠⠃                ⠈⠉⠉⠉⠙⠒⠒⠒⠒⠲⠤⠤⠤⠤⠤⢤⣀⣀⣀⣀⣀⣀⣀⡀
                   │    ⠈⠉⠒⠢⠤⢤⣀⣀⣀        ⡜                                        ⠈⠉⠉⠉⠉⠉⠉⠉⠉⠉⠑⠒⠒
                   │             ⠉⠉⠉⠉⠉⠉⠓⠚⠁
                  0└───────────────────────────────────────────────────────────────────────────
                   1                                   15.5                                  30

     test type              raw           characters         consistency        time
     time 30                7             18/0/0/0           0%                 30.0s
     portuguese common
     expert · adaptive





                       enter next    r repeat    h words    s stats    q quit
