src/snapshots/tuipe__ui__tests__test_result_70x22.snap
---
source: src/ui.rs
expression: rendered
---


   ⌨ tuipe



                        wpm 7    precisão 100%
                      bruto 7    consistência 0%
                  caracteres 18/0/0/0    tempo 30.0s

                             ◷ 30 segundos
                              ◎ português
                            ★ especialista







                     ›        ↻        ⌁        ×
        enter próximo    r repetir    s estatísticas    q sair
