src/snapshots/tuipe__ui__tests__test_running_100x28.snap
---
source: src/ui.rs
expression: "render_engine_at(100, 28, &engine)"
---











     30
     olá mundo prática
